# SemVLA-Gemma

./: .gitignore  README.md  patch.py  pyproject.toml
configs/adapter/: franka_7dof.yaml  xarm_7dof.yaml
configs/brain/: phase1_libero.yaml
configs/eval/: cross_embodiment.yaml  libero_full.yaml
data/annotation/: libero_build_graph.py  libero_extract_bboxes.py  motion_primitive_label.py
data/schemas/: action.json  grounding.json
data/splits/: libero_train.manifest.json
env/: semvla-server-conda.yaml
headless-vla/: .gitignore  CLAUDE.md
headless-vla/ckpts/franka_7dof/: action_stats.json
headless-vla/configs/adapter/: franka_7dof.yaml  ur5_6dof.yaml  widowx_6dof.yaml
headless-vla/configs/brain/: phase1_libero.yaml
headless-vla/configs/eval/: cross_embodiment.yaml
headless-vla/data/annotation/: libero_build_graph.py  libero_extract_bboxes.py  motion_primitive_label.py
headless-vla/envs/: libero_wrapper.py  ros2_wrapper.py
headless-vla/scripts/: bench_latency.sh  eval_libero.sh  train_adapter.sh
headless-vla/tests/: test_chain_jsonl.py  test_flow_matching.py  test_middleware_safe_stop.py  test_normalization.py
models/adapter/: eval.py  flow_matching.py  train.py
models/brain/: eval.py  infer.py  prompts.py  train.py
models/middleware/: chain.py  enums.py  graph_encoder.py  normalize.py
scripts/: bench_latency.sh  merge_brain.py  setup_and_train_semvla_server.sh  slurm_01_build_data.sh  slurm_02_train_brain.sh  slurm_03_train_adapter.sh  slurm_04_eval_brain.sh  train_adapter.sh  train_brain.sh  train_semvla.sh
tests/: test_chain_jsonl.py
(+24 files in other folders)
