[project]
name = "headless-vla"
version = "0.1.0"
description = "Headless VLA via Scene Graph Grounding and Per-Embodiment Adapters"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "torchvision",
    "transformers",
    "peft",
    "accelerate",
    "datasets",
    "h5py",
    "numpy<2.0.0",
    "opencv-python",
    "hydra-core",
    "wandb",
    "outlines"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
